Attribution Links now open in a new tab

--- a/Pages/Other/About.razor
+++ b/Pages/Other/About.razor
@@ -15,13 +15,41 @@
 </h3>
 
 <ul>
-    <li><a href="https://thenounproject.com/icon/3145952/">Speech Bubble</a> by libertetstudio from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/112625/">world clock</a> by Creative Stall from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/3406259/">Dice</a> by Alice Design from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/1364532/">File</a> by Trendy from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/4010634/">pin mark</a> by KP Arts from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/1925312/">QR Code</a> by icon 54 from the Noun Project</li>
-    <li><a href="https://thenounproject.com/icon/3322529/">html</a> by The Icon Z from the Noun Project</li>
+    <li>
+        <a href="https://thenounproject.com/icon/3145952/" target="_blank">
+            Speech Bubble 
+        </a> by libertetstudio from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/112625/" target="_blank">
+            world clock 
+        </a> by Creative Stall from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/3406259/" target="_blank">
+            Dice 
+        </a> by Alice Design from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/1364532/" target="_blank">
+            File 
+        </a> by Trendy from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/4010634/" target="_blank">
+            pin mark 
+        </a> by KP Arts from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/1925312/" target="_blank">
+            QR Code 
+        </a> by icon 54 from the Noun Project
+    </li>
+    <li>
+        <a href="https://thenounproject.com/icon/3322529/" target="_blank">
+            html 
+        </a> by The Icon Z from the Noun Project
+    </li>
 </ul>
 
 @code {
