--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.SignalR.Client;
 @using Microsoft.JSInterop
 @using HomePage
 @using HomePage.Shared
