--- a/Pages/Toys/SignalRTest.razor
+++ b/Pages/Toys/SignalRTest.razor
@@ -8,6 +8,10 @@
     @IncomingMessage
 </div>
 
+<div class="py-3">
+    Click <a href="https://roman015storage.blob.core.windows.net/test/test_event_modified.ics">Here</a> to download .ics file
+</div>
+
 @code {
     string IncomingMessage { get; set; } = "No Message";
 
