--- a/Pages/Toys/SignalRTest.razor
+++ b/Pages/Toys/SignalRTest.razor
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-    <blockquote class="instagram-media"
+    <blockquote class="instagram-media" data-instgrm-captioned
                 data-instgrm-permalink="https://www.instagram.com/p/CR-QU-MBWql/?utm_source=ig_embed&amp;utm_campaign=loading"
                 data-instgrm-version="13"
                 style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
@@ -86,11 +86,11 @@
             <p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                 <a href="https://www.instagram.com/p/CR-QU-MBWql/?utm_source=ig_embed&amp;utm_campaign=loading"
                    style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                   target="_blank">A post shared by Xavier (@@roman00015)</a>
+                   target="_blank">A post shared by Xavier (@roman00015)</a>
             </p>
         </div>
     </blockquote>
-    
+    <script async src="//www.instagram.com/embed.js"></script>
 </div>
 
 @code {
